Adding christmas effect

--- a/src/AKCore/Views/Shared/Components/Header/Default.cshtml
+++ b/src/AKCore/Views/Shared/Components/Header/Default.cshtml
@@ -43,6 +43,7 @@
     <nav>
         <partial name="Partials/DesktopMenu" model="Model"/>
     </nav>
+    <div id="snow"></div>
 </header>
 <div id="mobile-menu">
     <partial name="Partials/MobileMenu" model="Model"/>
